--- a/o-nas.html
+++ b/o-nas.html
@@ -1,188 +1,126 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>O nas — Baltic Digital Institute</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>O nas - Baltic Digital Institute</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <style> body { font-family: 'Inter','Lato', sans-serif; } </style>
+  <link rel="icon" href="assets/svg/Logo main.svg">
 </head>
-<body class="bg-[#0A192F] text-white antialiased">
+<body class="bg-white text-gray-900">
 
-  <!-- header (shared) -->
-  <header class="fixed top-0 left-0 right-0 bg-[#0A192F]/90 z-50">
-    <div class="max-w-6xl mx-auto flex items-center justify-between p-4">
-      <a href="index.html" class="flex items-center gap-3"><img src="assets/svg/Logo main.svg" class="h-10" alt="" /><span class="font-bold">Baltic Digital Institute</span></a>
-      <nav class="hidden md:flex gap-8">
-        <a href="index.html" class="hover:text-[#64FFDA]">Start</a>
-        <a href="o-nas.html" class="hover:text-[#64FFDA]">O nas</a>
-        <a href="rozwiazania.html" class="hover:text-[#64FFDA]">Rozwiązania</a>
-        <a href="kontakt.html" class="hover:text-[#64FFDA]">Kontakt</a>
-      </nav>
-      <button id="menu-btn" class="md:hidden p-1 flex flex-col gap-1" aria-label="menu">
-        <span class="block w-6 h-0.5 bg-white"></span>
-        <span class="block w-6 h-0.5 bg-white"></span>
-        <span class="block w-6 h-0.5 bg-white"></span>
-      </button>
-    </div>
-
-    <div id="mobile-menu" class="hidden md:hidden bg-[#0A192F]/95 text-center">
-      <a href="index.html" class="block px-6 py-3 hover:text-[#64FFDA]">Start</a>
-      <a href="o-nas.html" class="block px-6 py-3 hover:text-[#64FFDA]">O nas</a>
-      <a href="rozwiazania.html" class="block px-6 py-3 hover:text-[#64FFDA]">Rozwiązania</a>
-      <a href="kontakt.html" class="block px-6 py-3 hover:text-[#64FFDA]">Kontakt</a>
-    </div>
+  <!-- Navbar -->
+  <header class="fixed w-full bg-white shadow z-50">
+    <nav class="max-w-7xl mx-auto flex justify-between items-center px-6 py-4">
+      <a href="index.html">
+        <img src="assets/svg/Logo main.svg" alt="Baltic Digital Institute" class="h-10">
+      </a>
+      <ul class="hidden md:flex space-x-6 font-medium">
+        <li><a href="index.html" class="hover:text-cyan-600">Strona główna</a></li>
+        <li><a href="o-nas.html" class="hover:text-cyan-600">O nas</a></li>
+        <li><a href="rozwiazania.html" class="hover:text-cyan-600">Rozwiązania</a></li>
+        <li><a href="kontakt.html" class="hover:text-cyan-600">Kontakt</a></li>
+      </ul>
+    </nav>
   </header>
 
-  <main class="pt-24">
-    <section class="py-12 bg-[#0F2238] text-center">
-      <div class="max-w-4xl mx-auto px-6">
-        <h1 class="text-4xl font-bold mb-4">O nas</h1>
-        <p class="text-gray-300">Mandat Strategiczy | Misja | Wizja | Wartości — zebrane w jednym miejscu, aby jasno komunikować, kim jesteśmy i dokąd zmierzamy.</p>
-      </div>
-    </section>
+  <!-- O nas -->
+  <section class="pt-32 pb-20 max-w-6xl mx-auto px-6">
+    <h1 class="text-4xl font-bold mb-8">O nas</h1>
+    <p class="text-lg text-gray-700 mb-8">
+      Baltic Digital Institute powstał w wyniku transformacji Fundacji Instytut Nowoczesnej Edukacji (2021–2025).
+      Naszą misją jest wspieranie transformacji cyfrowej w regionie Morza Bałtyckiego w obszarach AI, cyberbezpieczeństwa
+      i cyfrowej odporności.
+    </p>
 
-    <section class="py-12 max-w-6xl mx-auto px-6">
-      <h2 class="text-2xl font-bold text-[#64FFDA] mb-4">Mandat strategiczny</h2>
-      <p class="text-gray-300 leading-relaxed mb-6">
-        Nasz nadrzędny cel i definicje misji/wizji pochodzą z oficjalnych dokumentów strategicznych — to gwarancja spójności działań.
-      </p>
-
-      <div class="grid md:grid-cols-2 gap-8">
+    <!-- Zarząd i Rada -->
+    <div class="grid md:grid-cols-2 gap-10">
+      <!-- Krzysztof -->
+      <div class="flex items-center space-x-4">
+        <img src="assets/img/krzysztof-rek.jpg" alt="Krzysztof Rek" class="w-24 h-24 object-cover rounded-full shadow">
         <div>
-          <h3 class="font-semibold mb-2">Misja</h3>
-          <p class="text-gray-300 text-sm leading-relaxed mb-4">
-            Przesuwamy granice efektywnego wykorzystania sztucznej inteligencji i cyberbezpieczeństwa w regionie Morza Bałtyckiego poprzez badania, innowacje, wdrożenia i edukację.
-          </p>
-
-          <h3 class="font-semibold mb-2">Wizja</h3>
-          <p class="text-gray-300 text-sm leading-relaxed">
-            Chcemy być wiodącym katalizatorem transformacyjnych rozwiązań w zakresie AI i cyberbezpieczeństwa, rozpoznawalnym globalnie dzięki doskonałości badawczej i etycznemu podejściu.
-          </p>
+          <h3 class="font-semibold text-lg">Krzysztof Rek</h3>
+          <p class="text-sm text-gray-600">Prezes Zarządu</p>
         </div>
-
+      </div>
+      <!-- Monika -->
+      <div class="flex items-center space-x-4">
+        <img src="assets/img/monika-zawadzka.jpg" alt="Monika Zawadzka" class="w-24 h-24 object-cover rounded-full shadow">
         <div>
-          <h3 class="font-semibold mb-2">Wartości</h3>
-          <ul class="text-gray-300 space-y-2">
-            <li><strong>Innowacyjność i doskonałość</strong> — ciągłe podnoszenie poprzeczki.</li>
-            <li><strong>Odpowiedzialność i etyka</strong> — „Technologia z sumieniem”.</li>
-            <li><strong>Współpraca i otwartość</strong> — partnerstwa międzysektorowe.</li>
-            <li><strong>Wpływ społeczny</strong> — użycie technologii dla dobra publicznego.</li>
-          </ul>
+          <h3 class="font-semibold text-lg">Monika Zawadzka</h3>
+          <p class="text-sm text-gray-600">Wiceprezes Zarządu</p>
         </div>
       </div>
-    </section>
-
-    <!-- Rozszerzona historia i wyniki -->
-    <section class="py-12 bg-[#0A192F] text-gray-300">
-      <div class="max-w-6xl mx-auto px-6">
-        <h3 class="text-2xl font-bold mb-4 text-[#64FFDA]">Historia i rozwój</h3>
-        <p class="mb-6 leading-relaxed">
-          Fundacja FINE zarejestrowana w 2021, pierwsze projekty w Pomorskim, przeniesienie siedziby do Kartuz w 2022, otwarcie
-          siedziby operacyjnej w Gdańsku w 2023 oraz rebranding na Baltic Digital Institute w 2025. W 2023 zarządzaliśmy budżetem
-          przekraczającym 1,1 mln PLN — dowód na skalę i zdolność operacyjną.
-        </p>
-
-        <h4 class="font-semibold mb-2">Wybrane fakty</h4>
-        <ul class="space-y-2">
-          <li>2021 — start, praca z NGO i wolontariat.</li>
-          <li>2022 — pierwsze przychody i grant "Pomorskie z Ukrainą".</li>
-          <li>2023 — Centrum Wsparcia Uchodźców, wzrost operacji.</li>
-          <li>2025 — zmiana nazwy i poszerzenie misji o AI i certyfikację.</li>
-        </ul>
-      </div>
-    </section>
-
-    <!-- Zarząd (szczegóły) -->
-    <section class="py-12">
-      <div class="max-w-6xl mx-auto px-6">
-        <h3 class="text-2xl font-bold text-[#64FFDA] mb-6">Zarząd</h3>
-
-        <div class="grid md:grid-cols-2 gap-6">
-          <article class="bg-[#0A192F] p-6 rounded-xl shadow">
-            <div class="flex gap-4">
-              <img src="assets/img/krzysztof-rek.jpg" alt="Krzysztof Rek" class="w-24 h-24 rounded-full object-cover bg-gray-700">
-              <div>
-                <h4 class="font-semibold">Krzysztof Rek — Prezes Zarządu</h4>
-                <p class="text-sm text-gray-300 leading-relaxed">
-                  Lider transformacji cyfrowej z doświadczeniem w ENERGA, Shell i akademii (SGH).
-                  Ekspert w zarządzaniu programami, Data Governance i strategii cyfrowej.
-                </p>
-                <p class="mt-2 text-xs text-gray-400"><a href="https://www.linkedin.com/in/krzysztofrek" class="text-[#64FFDA] hover:underline">Profil LinkedIn</a></p>
-              </div>
-            </div>
-          </article>
-
-          <article class="bg-[#0A192F] p-6 rounded-xl shadow">
-            <div class="flex gap-4">
-              <img src="assets/img/monika-zawadzka.jpg" alt="Monika Zawadzka" class="w-24 h-24 rounded-full object-cover bg-gray-700">
-              <div>
-                <h4 class="font-semibold">Monika Zawadzka — Wiceprezes</h4>
-                <p class="text-sm text-gray-300 leading-relaxed">
-                  Ekspertka ds. ESG i transformacji; doświadczenie w PKO, Pekao Leasing i sektorze prywatnym.
-                </p>
-                <p class="mt-2 text-xs text-gray-400"><a href="#" class="text-[#64FFDA] hover:underline">Profil LinkedIn</a></p>
-              </div>
-            </div>
-          </article>
+      <!-- Adam -->
+      <div class="flex items-center space-x-4">
+        <img src="assets/img/adam-przadka.jpg" alt="Adam Prządka" class="w-24 h-24 object-cover rounded-full shadow">
+        <div>
+          <h3 class="font-semibold text-lg">dr Adam Prządka</h3>
+          <p class="text-sm text-gray-600">Rada Programowa</p>
         </div>
       </div>
-    </section>
-
-    <!-- Rada Programowa (mini bio) -->
-    <section class="py-12 bg-[#0F2238]">
-      <div class="max-w-6xl mx-auto px-6">
-        <h3 class="text-2xl font-bold text-[#64FFDA] mb-6">Rada Programowa — wybrane osoby</h3>
-
-        <div class="grid md:grid-cols-3 gap-6 text-gray-300">
-          <div class="bg-[#0A192F] p-6 rounded-xl">
-            <h4 class="font-semibold">dr Adam Prządka</h4>
-            <p class="text-sm leading-relaxed">Data Scientist, doświadczenie w Schneider Electric i Nielsen; PhD (ESPCI Paris).</p>
-          </div>
-          <div class="bg-[#0A192F] p-6 rounded-xl">
-            <h4 class="font-semibold">dr Karolina Janczukowicz</h4>
-            <p class="text-sm leading-relaxed">Adiunkt, Uniwersytet Gdański — psycholingwistyka i dydaktyka.</p>
-          </div>
-          <div class="bg-[#0A192F] p-6 rounded-xl">
-            <h4 class="font-semibold">dr Zuzanna Wiorogórska</h4>
-            <p class="text-sm leading-relaxed">Adiunkt, UW — edukacja informacyjna i otwarta nauka.</p>
-          </div>
+      <!-- Karolina -->
+      <div class="flex items-center space-x-4">
+        <img src="assets/img/karolina-janczukowicz.jpg" alt="Karolina Janczukowicz" class="w-24 h-24 object-cover rounded-full shadow">
+        <div>
+          <h3 class="font-semibold text-lg">dr Karolina Janczukowicz</h3>
+          <p class="text-sm text-gray-600">Rada Programowa</p>
         </div>
       </div>
-    </section>
-
-    <!-- Zaufanie i zasoby -->
-    <section class="py-12">
-      <div class="max-w-6xl mx-auto px-6 text-gray-300">
-        <h3 class="text-2xl font-bold text-[#64FFDA] mb-4">Zasoby i wiarygodność</h3>
-        <p class="leading-relaxed mb-4">
-          Siedziba operacyjna: ul. Hołdu Pruskiego 6, Gdańsk — Centrum Nowoczesnej Edukacji (200 m²) z salami szkoleniowymi.
-        </p>
-        <p class="leading-relaxed mb-6">
-          Finansowo: 2023 — budżet >1,1 mln PLN (skokowy wzrost związany z programami grantowymi i projektami społecznymi).
-        </p>
-
-        <div class="flex flex-wrap gap-6 items-center">
-          <img src="assets/img/partner1.png" alt="" class="h-12 grayscale opacity-80" />
-          <img src="assets/img/partner2.png" alt="" class="h-12 grayscale opacity-80" />
-          <img src="assets/img/partner3.png" alt="" class="h-12 grayscale opacity-80" />
+      <!-- Zuzanna -->
+      <div class="flex items-center space-x-4">
+        <img src="assets/img/zuzanna-wiorogorska.jpg" alt="Zuzanna Wiorogórska" class="w-24 h-24 object-cover rounded-full shadow">
+        <div>
+          <h3 class="font-semibold text-lg">dr Zuzanna Wiorogórska</h3>
+          <p class="text-sm text-gray-600">Rada Programowa</p>
         </div>
       </div>
-    </section>
-  </main>
-
-  <footer class="bg-[#0A192F]/95 text-gray-400 py-8">
-    <div class="max-w-6xl mx-auto px-6 text-center text-sm">
-      <p>ul. Hołdu Pruskiego 6, 80-741 Gdańsk • kontakt@baltic-digital.org</p>
-      <p class="mt-2">© 2025 Baltic Digital Institute</p>
+      <!-- Danuta -->
+      <div class="flex items-center space-x-4">
+        <img src="assets/img/danuta-rek.jpg" alt="Danuta Rek" class="w-24 h-24 object-cover rounded-full shadow">
+        <div>
+          <h3 class="font-semibold text-lg">mgr Danuta Rek</h3>
+          <p class="text-sm text-gray-600">Rada Programowa</p>
+        </div>
+      </div>
+      <!-- Mirosław -->
+      <div class="flex items-center space-x-4">
+        <img src="assets/img/miroslaw-lukaszewicz.jpg" alt="Mirosław Łukasiewicz" class="w-24 h-24 object-cover rounded-full shadow">
+        <div>
+          <h3 class="font-semibold text-lg">dr Mirosław Łukasiewicz</h3>
+          <p class="text-sm text-gray-600">Rada Nadzorcza</p>
+        </div>
+      </div>
+      <!-- Joanna -->
+      <div class="flex items-center space-x-4">
+        <img src="assets/img/joanna-kosowicz.jpg" alt="Joanna Kosowicz" class="w-24 h-24 object-cover rounded-full shadow">
+        <div>
+          <h3 class="font-semibold text-lg">Joanna Kosowicz</h3>
+          <p class="text-sm text-gray-600">Rada Nadzorcza</p>
+        </div>
+      </div>
+      <!-- Placeholder: Jose -->
+      <div class="flex items-center space-x-4">
+        <img src="assets/img/placeholder-portrait.jpg" alt="Jose Antonio Gamez Martinez" class="w-24 h-24 object-cover rounded-full shadow">
+        <div>
+          <h3 class="font-semibold text-lg">dr Jose Antonio Gamez Martinez</h3>
+          <p class="text-sm text-gray-600">Rada Programowa</p>
+        </div>
+      </div>
+      <!-- Placeholder: Mogadorska -->
+      <div class="flex items-center space-x-4">
+        <img src="assets/img/placeholder-portrait.jpg" alt="Aleksandra Natalia Mogadorska" class="w-24 h-24 object-cover rounded-full shadow">
+        <div>
+          <h3 class="font-semibold text-lg">Aleksandra Natalia Mogadorska</h3>
+          <p class="text-sm text-gray-600">Rada Nadzorcza</p>
+        </div>
+      </div>
     </div>
-  </footer>
+  </section>
 
-  <script>
-    const menuBtn = document.getElementById('menu-btn');
-    const mobileMenu = document.getElementById('mobile-menu');
-    menuBtn.addEventListener('click', () => mobileMenu.classList.toggle('hidden'));
-  </script>
+  <!-- Footer -->
+  <footer class="bg-gray-100 py-8 text-center text-sm text-gray-600">
+    © 2025 Baltic Digital Institute. Wszystkie prawa zastrzeżone.
+  </footer>
 </body>
 </html>
